--- a/shipping.html
+++ b/shipping.html
@@ -1,3 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Shipping Policy – The Joseph Moyer Project</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Shipping policy for The Joseph Moyer Project." />
+  <link rel="icon" href="/Assets/Home/fav01.png" />
+  <link rel="canonical" href="/shipping.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Shipping Policy – The Joseph Moyer Project" />
+  <meta property="og:description" content="Shipping policy for The Joseph Moyer Project." />
+  <meta property="og:url" content="/shipping.html" />
+  <meta property="og:image" content="/Assets/Home/storefront.png" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Shipping Policy – The Joseph Moyer Project" />
+  <meta name="twitter:description" content="Shipping policy for The Joseph Moyer Project." />
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+
+  <!-- TOP MENU -->
+  <header>
+    <div class="container header-inner">
+      <nav>
+        <a href="index.html#hero">Basecamp</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="https://thejosephmoyerproject.printful.me/">The Store</a>
+        <a href="blog.html">Notes from the Field</a>
+        <a href="spotify.html">Soundtracks</a>
+        <a href="services.html">Services</a>
+      </nav>
+    </div>
+  </header>
+
 <main>
   <section class="section-light">
     <div class="container" style="max-width: 880px;">
@@ -58,3 +95,55 @@
     </div>
   </section>
 </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="container">
+      <div class="footer-top">
+        <div>
+          <div class="footer-brand-title">THE JOSEPH MOYER PROJECT</div>
+        </div>
+        <div class="footer-cols">
+          <div>
+            <div class="footer-heading">Navigate</div>
+            <div class="footer-links">
+              <a href="index.html#hero">Basecamp</a>
+              <a href="portfolio.html">Portfolio</a>
+              <a href="index.html#store">The Store</a>
+              <a href="blog.html">Notes from the Field</a>
+              <a href="services.html">Services</a>
+            </div>
+          </div>
+          <div>
+            <div class="footer-heading">Connect</div>
+            <div class="footer-social">
+              <a href="https://www.instagram.com/josephmoyer/" target="_blank" rel="noreferrer noopener">Instagram</a>
+              <a href="https://www.facebook.com/thejosephmoyerproject" target="_blank" rel="noreferrer noopener">Facebook</a>
+              <a href="https://www.linkedin.com/in/josephmoyer/" target="_blank" rel="noreferrer noopener">LinkedIn</a>
+              <a href="https://www.behance.net/JosephMoyer" target="_blank" rel="noreferrer noopener">Behance</a>
+              <a href="https://open.spotify.com/user/thedoctor042" target="_blank" rel="noreferrer noopener">Spotify</a>
+            </div>
+          </div>
+          <div>
+            <div class="footer-heading">Legal</div>
+            <div class="footer-legal">
+              <a href="terms.html">Terms of Use</a>
+              <a href="privacy.html">Privacy Policy</a>
+              <a href="shipping.html">Shipping Policy</a>
+              <a href="refund.html">Refund Policy</a>
+              <a href="accessibility.html">Accessibility</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        © <span id="year"></span> The Joseph Moyer Project. All rights reserved.
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = "2026";
+  </script>
+</body>
+</html>
