--- a/store.html
+++ b/store.html
@@ -8,6 +8,17 @@
     name="description"
     content="Browse prints, poem prints, and design pieces from The Joseph Moyer Project."
   />
+  <link rel="icon" href="/Assets/Home/fav01.png" />
+  <link rel="canonical" href="/store.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="The Store – The Joseph Moyer Project" />
+  <meta property="og:description" content="Browse prints, poem prints, and design pieces from The Joseph Moyer Project." />
+  <meta property="og:url" content="/store.html" />
+  <meta property="og:image" content="/Assets/Home/store-front.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="The Store – The Joseph Moyer Project" />
+  <meta name="twitter:description" content="Browse prints, poem prints, and design pieces from The Joseph Moyer Project." />
+  <meta name="twitter:image" content="/Assets/Home/store-front.png" />
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet" />
   <style>
@@ -357,8 +368,9 @@
       <nav>
         <a href="index.html#hero">Basecamp</a>
         <a href="portfolio.html">Portfolio</a>
-        <a href="store.html">The Store</a>
+        <a href="https://thejosephmoyerproject.printful.me/">The Store</a>
         <a href="blog.html">Notes from the Field</a>
+        <a href="spotify.html">Soundtracks</a>
         <a href="services.html">Services</a>
       </nav>
     </div>
@@ -675,7 +687,7 @@
             <div class="footer-links">
               <a href="index.html#hero">Basecamp</a>
               <a href="portfolio.html">Portfolio</a>
-              <a href="store.html">The Store</a>
+              <a href="index.html#store">The Store</a>
               <a href="blog.html">Notes from the Field</a>
               <a href="services.html">Services</a>
             </div>
@@ -683,10 +695,11 @@
           <div>
             <div class="footer-heading">Connect</div>
             <div class="footer-social">
-              <a href="https://www.instagram.com/josephmoyer/" target="_blank" rel="noreferrer">Instagram</a>
-              <a href="https://www.facebook.com/thejosephmoyerproject" target="_blank" rel="noreferrer">Facebook</a>
-              <a href="https://www.linkedin.com/in/josephmoyer/" target="_blank" rel="noreferrer">LinkedIn</a>
-              <a href="https://open.spotify.com/user/thedoctor042" target="_blank" rel="noreferrer">Spotify</a>
+              <a href="https://www.instagram.com/josephmoyer/" target="_blank" rel="noreferrer noopener">Instagram</a>
+              <a href="https://www.facebook.com/thejosephmoyerproject" target="_blank" rel="noreferrer noopener">Facebook</a>
+              <a href="https://www.linkedin.com/in/josephmoyer/" target="_blank" rel="noreferrer noopener">LinkedIn</a>
+              <a href="https://www.behance.net/JosephMoyer" target="_blank" rel="noreferrer noopener">Behance</a>
+              <a href="https://open.spotify.com/user/thedoctor042" target="_blank" rel="noreferrer noopener">Spotify</a>
             </div>
           </div>
           <div>
@@ -705,10 +718,10 @@
         © <span id="year"></span> The Joseph Moyer Project. All rights reserved.
       </div>
     </div>
-    <script>
-      document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
   </footer>
 
+  <script>
+    document.getElementById("year").textContent = "2026";
+  </script>
 </body>
 </html>
