--- a/about.html
+++ b/about.html
@@ -8,6 +8,17 @@
     name="description"
     content="Learn more about Joseph Moyer — photographer, writer, and projection mapping artist behind The Joseph Moyer Project."
   />
+  <link rel="icon" href="/Assets/Home/fav01.png" />
+  <link rel="canonical" href="/about.html" />
+  <meta property="og:type" content="profile" />
+  <meta property="og:title" content="About – The Joseph Moyer Project" />
+  <meta property="og:description" content="Learn more about Joseph Moyer — photographer, writer, and projection mapping artist behind The Joseph Moyer Project." />
+  <meta property="og:url" content="/about.html" />
+  <meta property="og:image" content="/Assets/Home/The Backstory Bio Pic.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="About – The Joseph Moyer Project" />
+  <meta name="twitter:description" content="Learn more about Joseph Moyer — photographer, writer, and projection mapping artist behind The Joseph Moyer Project." />
+  <meta name="twitter:image" content="/Assets/Home/The Backstory Bio Pic.jpg" />
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet" />
   <style>
@@ -198,14 +209,68 @@
       font-weight: 600;
     }
 
-    /* Footer (simplified) */
+    /* FOOTER */
     footer {
       border-top: 1px solid #e5e7eb;
       background: #ffffff;
-      padding: 1.6rem 0;
+      padding: 2rem 0 1.5rem;
       font-size: 0.85rem;
       color: #4b5563;
+    }
+    .footer-top {
+      display: grid;
+      gap: 1.5rem;
+      margin-bottom: 1.2rem;
+    }
+    .footer-brand-title {
+      font-size: 0.95rem;
+      font-weight: 600;
+      color: #111827;
+      letter-spacing: 0.14em;
+      text-transform: uppercase;
+      margin-bottom: 0.4rem;
+    }
+    .footer-cols {
+      display: grid;
+      gap: 1.75rem;
+    }
+    .footer-heading {
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+      color: #9ca3af;
+      margin-bottom: 0.5rem;
+    }
+    .footer-links, .footer-legal, .footer-social {
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
+    }
+    .footer-links a,
+    .footer-legal a,
+    .footer-social a {
+      color: #000000;
+    }
+    .footer-links a:hover,
+    .footer-legal a:hover,
+    .footer-social a:hover {
+      color: #333333;
+    }
+    .footer-bottom {
+      border-top: 1px solid #e5e7eb;
+      padding-top: 0.8rem;
       text-align: center;
+      font-size: 0.8rem;
+      color: #9ca3af;
+    }
+
+    @media (min-width: 768px) {
+      .footer-top {
+        grid-template-columns: 1.4fr 2fr;
+      }
+      .footer-cols {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+      }
     }
   </style>
 </head>
@@ -216,8 +281,9 @@
     <nav>
       <a href="index.html#hero">Basecamp</a>
       <a href="portfolio.html">Portfolio</a>
-      <a href="store.html">The Store</a>
-      <a href="blogs.html">Notes from the Field</a>
+      <a href="https://thejosephmoyerproject.printful.me/">The Store</a>
+      <a href="blog.html">Notes from the Field</a>
+      <a href="spotify.html">Soundtracks</a>
       <a href="services.html">Services</a>
     </nav>
   </div>
@@ -332,11 +398,54 @@
   </section>
 </main>
 
-<footer>
-  © <span id="year"></span> The Joseph Moyer Project. All rights reserved.
-</footer>
-<script>
-  document.getElementById("year").textContent = new Date().getFullYear();
-</script>
+  <!-- FOOTER -->
+  <footer>
+    <div class="container">
+      <div class="footer-top">
+        <div>
+          <div class="footer-brand-title">THE JOSEPH MOYER PROJECT</div>
+        </div>
+        <div class="footer-cols">
+          <div>
+            <div class="footer-heading">Navigate</div>
+            <div class="footer-links">
+              <a href="index.html#hero">Basecamp</a>
+              <a href="portfolio.html">Portfolio</a>
+              <a href="index.html#store">The Store</a>
+              <a href="blog.html">Notes from the Field</a>
+              <a href="services.html">Services</a>
+            </div>
+          </div>
+          <div>
+            <div class="footer-heading">Connect</div>
+            <div class="footer-social">
+              <a href="https://www.instagram.com/josephmoyer/" target="_blank" rel="noreferrer noopener">Instagram</a>
+              <a href="https://www.facebook.com/thejosephmoyerproject" target="_blank" rel="noreferrer noopener">Facebook</a>
+              <a href="https://www.linkedin.com/in/josephmoyer/" target="_blank" rel="noreferrer noopener">LinkedIn</a>
+              <a href="https://www.behance.net/JosephMoyer" target="_blank" rel="noreferrer noopener">Behance</a>
+              <a href="https://open.spotify.com/user/thedoctor042" target="_blank" rel="noreferrer noopener">Spotify</a>
+            </div>
+          </div>
+          <div>
+            <div class="footer-heading">Legal</div>
+            <div class="footer-legal">
+              <a href="terms.html">Terms of Use</a>
+              <a href="privacy.html">Privacy Policy</a>
+              <a href="shipping.html">Shipping Policy</a>
+              <a href="refund.html">Refund Policy</a>
+              <a href="accessibility.html">Accessibility</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        © <span id="year"></span> The Joseph Moyer Project. All rights reserved.
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = "2026";
+  </script>
 </body>
 </html>
