--- a/portfolio-marketing.html
+++ b/portfolio-marketing.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8" />
   <title>Marketing &amp; Design — The Joseph Moyer Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Marketing and design work by The Joseph Moyer Project — flyers, branding, and promotional materials." />
+  <link rel="icon" href="/Assets/Home/fav01.png" />
+  <link rel="canonical" href="/portfolio-marketing.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Marketing &amp; Design — The Joseph Moyer Project" />
+  <meta property="og:description" content="Marketing and design work by The Joseph Moyer Project — flyers, branding, and promotional materials." />
+  <meta property="og:url" content="/portfolio-marketing.html" />
+  <meta property="og:image" content="/Assets/Home/Marketing.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Marketing &amp; Design — The Joseph Moyer Project" />
+  <meta name="twitter:description" content="Marketing and design work by The Joseph Moyer Project — flyers, branding, and promotional materials." />
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
   <style>
     *,*::before,*::after{box-sizing:border-box;}
@@ -95,6 +106,70 @@
     .flyer-body h3{
       margin:0 0 0.25rem;font-size:1.02rem;color:#111827;
     }
+
+    /* FOOTER */
+    footer {
+      border-top: 1px solid #e5e7eb;
+      background: #ffffff;
+      padding: 2rem 0 1.5rem;
+      font-size: 0.85rem;
+      color: #4b5563;
+    }
+    .footer-top {
+      display: grid;
+      gap: 1.5rem;
+      margin-bottom: 1.2rem;
+    }
+    .footer-brand-title {
+      font-size: 0.95rem;
+      font-weight: 600;
+      color: #111827;
+      letter-spacing: 0.14em;
+      text-transform: uppercase;
+      margin-bottom: 0.4rem;
+    }
+    .footer-cols {
+      display: grid;
+      gap: 1.75rem;
+    }
+    .footer-heading {
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+      color: #9ca3af;
+      margin-bottom: 0.5rem;
+    }
+    .footer-links, .footer-legal, .footer-social {
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
+    }
+    .footer-links a,
+    .footer-legal a,
+    .footer-social a {
+      color: #000000;
+    }
+    .footer-links a:hover,
+    .footer-legal a:hover,
+    .footer-social a:hover {
+      color: #333333;
+    }
+    .footer-bottom {
+      border-top: 1px solid #e5e7eb;
+      padding-top: 0.8rem;
+      text-align: center;
+      font-size: 0.8rem;
+      color: #9ca3af;
+    }
+
+    @media (min-width: 768px) {
+      .footer-top {
+        grid-template-columns: 1.4fr 2fr;
+      }
+      .footer-cols {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+      }
+    }
   </style>
 </head>
 <body>
@@ -115,7 +190,7 @@
   <section class="section-light">
     <div class="container">
       <div class="breadcrumb">
-        <a href="index.html#hero">Home</a> ·
+        <a href="index.html#hero">Basecamp</a> ·
         <a href="portfolio.html">Portfolio</a> · Marketing &amp; Design
       </div>
       <div class="section-subtitle">Marketing &amp; Design</div>
@@ -126,49 +201,77 @@
       </p>
 
       <div class="collection-block">
-        <h2 class="collection-title">Physical Therapy Flyers</h2>
-        <p class="collection-desc">
-          A set of marketing pieces created for physical therapy clinics — focused on being
-          friendly, clear, and inviting. The goal: help real people feel comfortable taking
-          the next step in their care without overwhelming them with jargon.
-        </p>
-
         <div class="grid grid-3">
           <!-- Replace these placeholder paths with your actual flyer files when ready -->
-          <article class="flyer-card">
+          <a href="physical-therapy-gallery.html" class="flyer-card">
             <div class="flyer-image">
-              <img src="assets/home/Coming Soon.png" alt="Physical therapy flyer design placeholder." />
+              <img src="Assets/Home/Physical Therapy Sample Cover.png" alt="Physical therapy flyer design." />
             </div>
             <div class="flyer-body">
-              <h3>Healthy Motion Campaign</h3>
-              <p>A gentle introduction flyer focused on easing people into PT with clear, simple messaging.</p>
+              <h3>Physical Therapy Promotions</h3>
+              <p>Samples of marketing campaigns and flyers created for Physical Therapy Offices.</p>
             </div>
-          </article>
+          </a>
 
-          <article class="flyer-card">
+          <a href="corporate-design-gallery.html" class="flyer-card">
             <div class="flyer-image">
-              <img src="assets/home/Coming Soon.png" alt="Physical therapy flyer design placeholder." />
+              <img src="Assets/Home/Corporate.png" alt="Corporate design work samples." />
             </div>
             <div class="flyer-body">
-              <h3>Post-Injury Recovery</h3>
-              <p>Designed to reassure and guide patients after an injury, with approachable visuals and copy.</p>
+              <h3>Corporate Design</h3>
+              <p>Professional branding and design solutions for businesses and organizations.</p>
             </div>
-          </article>
-
-          <article class="flyer-card">
-            <div class="flyer-image">
-              <img src="assets/home/Coming Soon.png" alt="Physical therapy flyer design placeholder." />
-            </div>
-            <div class="flyer-body">
-              <h3>Strength &amp; Balance Series</h3>
-              <p>A flyer concept built around long-term wellness, not quick fixes.</p>
-            </div>
-          </article>
+          </a>
         </div>
       </div>
     </div>
   </section>
+  <!-- FOOTER -->
+  <footer>
+    <div class="container">
+      <div class="footer-top">
+        <div class="footer-brand">
+          <div class="footer-brand-title">The Joseph Moyer Project</div>
+          <p>Creative photography, writing, projection mapping, and marketing & design services.</p>
+        </div>
+        <div class="footer-cols">
+          <div>
+            <h4 class="footer-heading">Navigate</h4>
+            <div class="footer-links">
+              <a href="index.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="portfolio.html">Portfolio</a>
+              <a href="blog.html">Blog</a>
+              <a href="services.html">Services</a>
+              <a href="https://thejosephmoyerproject.printful.me/">Store</a>
+            </div>
+          </div>
+          <div>
+            <h4 class="footer-heading">Connect</h4>
+            <div class="footer-social">
+              <a href="mailto:contact@josephmoyerproject.com">Email</a>
+              <a href="https://instagram.com/josephmoyerproject" target="_blank" rel="noopener noreferrer">Instagram</a>
+              <a href="https://linkedin.com/in/josephmoyer" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+              <a href="https://www.behance.net/JosephMoyer" target="_blank" rel="noopener noreferrer">Behance</a>
+            </div>
+          </div>
+          <div>
+            <h4 class="footer-heading">Legal</h4>
+            <div class="footer-legal">
+              <a href="privacy.html">Privacy Policy</a>
+              <a href="terms.html">Terms of Service</a>
+              <a href="refund.html">Refund Policy</a>
+              <a href="shipping.html">Shipping Policy</a>
+              <a href="accessibility.html">Accessibility</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2024 The Joseph Moyer Project. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
 </main>
-
 </body>
 </html>
