--- a/portfolio-projection.html
+++ b/portfolio-projection.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8" />
   <title>Projection Mapping — The Joseph Moyer Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Projection mapping work and case studies by The Joseph Moyer Project." />
+  <link rel="icon" href="/Assets/Home/fav01.png" />
+  <link rel="canonical" href="/portfolio-projection.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Projection Mapping — The Joseph Moyer Project" />
+  <meta property="og:description" content="Projection mapping work and case studies by The Joseph Moyer Project." />
+  <meta property="og:url" content="/portfolio-projection.html" />
+  <meta property="og:image" content="/Assets/Home/Corporate.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Projection Mapping — The Joseph Moyer Project" />
+  <meta name="twitter:description" content="Projection mapping work and case studies by The Joseph Moyer Project." />
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
   <style>
     *,*::before,*::after{box-sizing:border-box;}
@@ -79,6 +90,70 @@
       padding:0.8rem 1rem 1rem;
       font-size:0.9rem;color:#e5e7eb;
     }
+
+    /* FOOTER */
+    footer {
+      border-top: 1px solid #e5e7eb;
+      background: #ffffff;
+      padding: 2rem 0 1.5rem;
+      font-size: 0.85rem;
+      color: #4b5563;
+    }
+    .footer-top {
+      display: grid;
+      gap: 1.5rem;
+      margin-bottom: 1.2rem;
+    }
+    .footer-brand-title {
+      font-size: 0.95rem;
+      font-weight: 600;
+      color: #111827;
+      letter-spacing: 0.14em;
+      text-transform: uppercase;
+      margin-bottom: 0.4rem;
+    }
+    .footer-cols {
+      display: grid;
+      gap: 1.75rem;
+    }
+    .footer-heading {
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+      color: #9ca3af;
+      margin-bottom: 0.5rem;
+    }
+    .footer-links, .footer-legal, .footer-social {
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
+    }
+    .footer-links a,
+    .footer-legal a,
+    .footer-social a {
+      color: #000000;
+    }
+    .footer-links a:hover,
+    .footer-legal a:hover,
+    .footer-social a:hover {
+      color: #333333;
+    }
+    .footer-bottom {
+      border-top: 1px solid #e5e7eb;
+      padding-top: 0.8rem;
+      text-align: center;
+      font-size: 0.8rem;
+      color: #9ca3af;
+    }
+
+    @media (min-width: 768px) {
+      .footer-top {
+        grid-template-columns: 1.4fr 2fr;
+      }
+      .footer-cols {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+      }
+    }
   </style>
 </head>
 <body>
@@ -88,8 +163,9 @@
     <nav>
       <a href="index.html#hero">Basecamp</a>
       <a href="portfolio.html">Portfolio</a>
-      <a href="index.html#store">The Store</a>
-      <a href="index.html#blog">Notes from the Field</a>
+      <a href="https://thejosephmoyerproject.printful.me/">The Store</a>
+      <a href="blog.html">Notes from the Field</a>
+      <a href="spotify.html">Soundtracks</a>
       <a href="services.html">Services</a>
     </nav>
   </div>
@@ -99,7 +175,7 @@
   <section>
     <div class="container">
       <div class="breadcrumb">
-        <a href="index.html#hero">Home</a> ·
+        <a href="index.html#hero">Basecamp</a> ·
         <a href="portfolio.html">Portfolio</a> · Projection Mapping
       </div>
       <div class="section-subtitle">Projection Mapping</div>
@@ -170,5 +246,51 @@
   </section>
 </main>
 
+  <!-- FOOTER -->
+  <footer>
+    <div class="container">
+      <div class="footer-top">
+        <div class="footer-brand">
+          <div class="footer-brand-title">The Joseph Moyer Project</div>
+          <p>Creative photography, writing, projection mapping, and marketing & design services.</p>
+        </div>
+        <div class="footer-cols">
+          <div>
+            <h4 class="footer-heading">Navigate</h4>
+            <div class="footer-links">
+              <a href="index.html">Basecamp</a>
+              <a href="about.html">About</a>
+              <a href="portfolio.html">Portfolio</a>
+              <a href="blog.html">Blog</a>
+              <a href="services.html">Services</a>
+              <a href="https://thejosephmoyerproject.printful.me/">Store</a>
+            </div>
+          </div>
+          <div>
+            <h4 class="footer-heading">Connect</h4>
+            <div class="footer-social">
+              <a href="mailto:contact@josephmoyerproject.com">Email</a>
+              <a href="https://instagram.com/josephmoyerproject" target="_blank" rel="noopener noreferrer">Instagram</a>
+              <a href="https://linkedin.com/in/josephmoyer" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+              <a href="https://www.behance.net/JosephMoyer" target="_blank" rel="noopener noreferrer">Behance</a>
+            </div>
+          </div>
+          <div>
+            <h4 class="footer-heading">Legal</h4>
+            <div class="footer-legal">
+              <a href="privacy.html">Privacy Policy</a>
+              <a href="terms.html">Terms of Service</a>
+              <a href="refund.html">Refund Policy</a>
+              <a href="shipping.html">Shipping Policy</a>
+              <a href="accessibility.html">Accessibility</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2024 The Joseph Moyer Project. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
