--- a/portfolio-writing.html
+++ b/portfolio-writing.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8" />
   <title>Creative Writing — The Joseph Moyer Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Creative writing and essays by Joseph Moyer — stories, reflections, and process notes." />
+  <link rel="icon" href="/Assets/Home/fav01.png" />
+  <link rel="canonical" href="/portfolio-writing.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Creative Writing — The Joseph Moyer Project" />
+  <meta property="og:description" content="Creative writing and essays by Joseph Moyer — stories, reflections, and process notes." />
+  <meta property="og:url" content="/portfolio-writing.html" />
+  <meta property="og:image" content="/Assets/Home/fav01.png" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Creative Writing — The Joseph Moyer Project" />
+  <meta name="twitter:description" content="Creative writing and essays by Joseph Moyer — stories, reflections, and process notes." />
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
   <style>
     *,*::before,*::after{box-sizing:border-box;}
@@ -84,6 +95,70 @@
       transition:background 0.12s ease,color 0.12s ease,transform 0.12s ease;
     }
     .btn:hover{background:#facc15;color:#111827;transform:translateY(-1px);}
+
+    /* FOOTER */
+    footer {
+      border-top: 1px solid #e5e7eb;
+      background: #ffffff;
+      padding: 2rem 0 1.5rem;
+      font-size: 0.85rem;
+      color: #4b5563;
+    }
+    .footer-top {
+      display: grid;
+      gap: 1.5rem;
+      margin-bottom: 1.2rem;
+    }
+    .footer-brand-title {
+      font-size: 0.95rem;
+      font-weight: 600;
+      color: #111827;
+      letter-spacing: 0.14em;
+      text-transform: uppercase;
+      margin-bottom: 0.4rem;
+    }
+    .footer-cols {
+      display: grid;
+      gap: 1.75rem;
+    }
+    .footer-heading {
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+      color: #9ca3af;
+      margin-bottom: 0.5rem;
+    }
+    .footer-links, .footer-legal, .footer-social {
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
+    }
+    .footer-links a,
+    .footer-legal a,
+    .footer-social a {
+      color: #000000;
+    }
+    .footer-links a:hover,
+    .footer-legal a:hover,
+    .footer-social a:hover {
+      color: #333333;
+    }
+    .footer-bottom {
+      border-top: 1px solid #e5e7eb;
+      padding-top: 0.8rem;
+      text-align: center;
+      font-size: 0.8rem;
+      color: #9ca3af;
+    }
+
+    @media (min-width: 768px) {
+      .footer-top {
+        grid-template-columns: 1.4fr 2fr;
+      }
+      .footer-cols {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+      }
+    }
   </style>
 </head>
 <body>
@@ -93,8 +168,9 @@
     <nav>
       <a href="index.html#hero">Basecamp</a>
       <a href="portfolio.html">Portfolio</a>
-      <a href="index.html#store">The Store</a>
-      <a href="index.html#blog">Notes from the Field</a>
+      <a href="https://thejosephmoyerproject.printful.me/">The Store</a>
+        <a href="blog.html">Notes from the Field</a>
+        <a href="spotify.html">Soundtracks</a>
       <a href="services.html">Services</a>
     </nav>
   </div>
@@ -123,7 +199,7 @@
             leave you alone. Sometimes lyrical, sometimes simple, always honest.
           </p>
           <!-- Link to your eventual poems page -->
-          <a class="btn" href="#">View Poems (coming soon)</a>
+          <a class="btn" href="poems.html">View Poems</a>
         </article>
 
         <article class="collection-card">
@@ -141,5 +217,54 @@
   </section>
 </main>
 
+  <!-- FOOTER -->
+  <footer>
+    <div class="container">
+      <div class="footer-top">
+        <div>
+          <div class="footer-brand-title">THE JOSEPH MOYER PROJECT</div>
+        </div>
+        <div class="footer-cols">
+          <div>
+            <div class="footer-heading">Navigate</div>
+            <div class="footer-links">
+              <a href="index.html#hero">Basecamp</a>
+              <a href="portfolio.html">Portfolio</a>
+              <a href="index.html#store">The Store</a>
+              <a href="blog.html">Notes from the Field</a>
+              <a href="services.html">Services</a>
+            </div>
+          </div>
+          <div>
+            <div class="footer-heading">Connect</div>
+            <div class="footer-social">
+              <a href="https://www.instagram.com/josephmoyer/" target="_blank" rel="noreferrer noopener">Instagram</a>
+              <a href="https://www.facebook.com/thejosephmoyerproject" target="_blank" rel="noreferrer noopener">Facebook</a>
+              <a href="https://www.linkedin.com/in/josephmoyer/" target="_blank" rel="noreferrer noopener">LinkedIn</a>
+              <a href="https://www.behance.net/JosephMoyer" target="_blank" rel="noreferrer noopener">Behance</a>
+              <a href="https://open.spotify.com/user/thedoctor042" target="_blank" rel="noreferrer noopener">Spotify</a>
+            </div>
+          </div>
+          <div>
+            <div class="footer-heading">Legal</div>
+            <div class="footer-legal">
+              <a href="terms.html">Terms of Use</a>
+              <a href="privacy.html">Privacy Policy</a>
+              <a href="shipping.html">Shipping Policy</a>
+              <a href="refund.html">Refund Policy</a>
+              <a href="accessibility.html">Accessibility</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        © <span id="year"></span> The Joseph Moyer Project. All rights reserved.
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = "2026";
+  </script>
 </body>
 </html>
